@@ -1,45 +1,40 @@
+package de.denkspuren.lvp;
+
 import java.io.FileInputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.net.InetSocketAddress;
 import java.nio.charset.StandardCharsets;
-import java.util.Base64;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.ArrayList;
+import java.util.Base64;
 import java.util.List;
 import java.util.Map;
-import java.util.Random;
-import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.ConcurrentHashMap;
+import java.util.concurrent.CopyOnWriteArrayList;
 import java.util.concurrent.Executors;
+import java.util.concurrent.TimeUnit;
+import java.util.concurrent.locks.Condition;
+import java.util.concurrent.locks.Lock;
+import java.util.concurrent.locks.ReentrantLock;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
 
 import com.sun.net.httpserver.HttpExchange;
 import com.sun.net.httpserver.HttpServer;
 
-import java.util.concurrent.TimeUnit;
-import java.util.concurrent.locks.Lock;
-import java.util.concurrent.locks.ReentrantLock;
-import java.util.concurrent.locks.Condition;
-
-// To run this code type `jshell -R-ea --enable-preview`
-
-enum SSEType { WRITE, CALL, SCRIPT, LOAD, CLEAR, RELEASE; }
-
-class LiveView {
-    final HttpServer server;
+public class LiveView {
+    public final HttpServer server;
     final int port;
     static int defaultPort = 50_001;
-    static final String index = "./web/index.html";
+    static final String index = "/web/index.html";
     static Map<Integer,LiveView> views = new ConcurrentHashMap<>();
     List<String> paths = new ArrayList<>();
 
     static void setDefaultPort(int port) { defaultPort = port != 0 ? Math.abs(port) : 50_001; }
     static int getDefaultPort() { return defaultPort; }
 
-    List<HttpExchange> sseClientConnections;
+    public List<HttpExchange> sseClientConnections;
 
     // lock required to temporarily block processing of `SSEType.LOAD`
     Lock lock = new ReentrantLock();
@@ -47,7 +42,7 @@ class LiveView {
     boolean loadEventOccured = false;
 
 
-    static LiveView onPort(int port) {
+    public static LiveView onPort(int port) {
         port = Math.abs(port);
         try {
             if (!views.containsKey(port))
@@ -60,7 +55,7 @@ class LiveView {
         }
     }
 
-    static LiveView onPort() { return onPort(defaultPort); }
+    public static LiveView onPort() { return onPort(defaultPort); }
 
     private LiveView(int port) throws IOException {
         this.port = port;
@@ -106,8 +101,11 @@ class LiveView {
                 return;
             }
             final String path = exchange.getRequestURI().getPath().equals("/") ? index
-                    : "." + exchange.getRequestURI().getPath();
-            try (final InputStream stream = new FileInputStream(path)) {
+                    : exchange.getRequestURI().getPath().startsWith("/web") ? exchange.getRequestURI().getPath() : "/de/denkspuren/lvp" + exchange.getRequestURI().getPath();
+
+            
+            System.out.println(path);
+            try (final InputStream stream = LiveView.class.getResourceAsStream(path)) {
                 final byte[] bytes = stream.readAllBytes();
                 exchange.getResponseHeaders().add("Content-Type", Files.probeContentType(Path.of(path)) + "; charset=utf-8");
                 exchange.sendResponseHeaders(200, bytes.length);
@@ -122,7 +120,7 @@ class LiveView {
         server.start();
     }
 
-    void sendServerEvent(SSEType sseType, String data) {
+    public void sendServerEvent(SSEType sseType, String data) {
         List<HttpExchange> deadConnections = new ArrayList<>();
         for (HttpExchange connection : sseClientConnections) {
             if (sseType == SSEType.LOAD) lock.lock();
@@ -152,11 +150,11 @@ class LiveView {
         sseClientConnections.removeAll(deadConnections);
     }
 
-    void createResponseContext(String path, Consumer<String> delegate) {
+    public void createResponseContext(String path, Consumer<String> delegate) {
         createResponseContext(path, delegate, "-1");
     }
 
-    void createResponseContext(String path, Consumer<String> delegate, String id) {
+    public void createResponseContext(String path, Consumer<String> delegate, String id) {
         server.createContext(path, exchange -> {
             if (!exchange.getRequestMethod().equalsIgnoreCase("post")) {
                 exchange.sendResponseHeaders(405, -1); // Method Not Allowed
@@ -191,45 +189,7 @@ class LiveView {
         server.stop(0);
     }
 
-    static void shutdown() {
+    public static void shutdown() {
         views.forEach((k, v) -> v.stop());
     }
 }
-
-interface Clerk {
-    static String generateID(int n) { // random alphanumeric string of size n
-        return new Random().ints(n, 0, 36).
-                            mapToObj(i -> Integer.toString(i, 36)).
-                            collect(Collectors.joining());
-    }
-
-    static String getHashID(Object o) { return Integer.toHexString(o.hashCode()); }
-
-    static LiveView view(int port) { return LiveView.onPort(port); }
-    static LiveView view() { return view(LiveView.getDefaultPort()); }
-
-    static void write(LiveView view, String html)        { view.sendServerEvent(SSEType.WRITE, html); }
-    static void call(LiveView view, String javascript)   { view.sendServerEvent(SSEType.CALL, javascript); }
-    static void script(LiveView view, String javascript) { view.sendServerEvent(SSEType.SCRIPT, javascript); }
-    static void load(LiveView view, String path) {
-        if (!view.paths.contains(path.trim())) view.sendServerEvent(SSEType.LOAD, path);
-    }
-    static void load(LiveView view, String onlinePath, String offlinePath) {
-        load(view, onlinePath + ", " + offlinePath);
-    }
-    static void clear(LiveView view) { view.sendServerEvent(SSEType.CLEAR, ""); }
-    static void clear() { clear(view()); };
-
-    static void markdown(String text) { new MarkdownIt(view()).write(text); }
-}
-
-/open skills/Text/Text.java
-/open skills/ObjectInspector/ObjectInspector.java
-/open views/Turtle/Turtle.java
-/open views/Markdown/Marked.java
-/open views/Markdown/MarkdownIt.java
-/open views/TicTacToe/TicTacToe.java
-/open views/Dot/Dot.java
-/open views/Input/Slider.java
-
-// LiveView view = Clerk.view();
